Fix the gapping between drawing and plot

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  padding-top: 50px;
+  padding: 50px 20px 0px 20px;
   text-align: center;
 }ƒ
 
